fixed width on mobiles

--- a/src/styles/components/_toDoList.scss
+++ b/src/styles/components/_toDoList.scss
@@ -112,6 +112,10 @@ li {
     margin-bottom: 1rem;
     padding: 8px 35px;
   }
+
+  .list-of-items {
+    min-width: 400px;
+  }
   button {
     padding: 8px;
   }
